@@ -1,3 +1,8 @@
+Fri Dec 21 02:57:56 GMT 2012  Olly Betts <olly@survex.com>
+
+	* net/remoteconnection.cc,net/remoteconnection.h: Only "outline"
+	  RemoteConnection dtor under __WIN32__.
+
 Fri Dec 21 02:56:28 GMT 2012  Olly Betts <olly@survex.com>
 
 	* backends/remote/remote-database.cc: Make the UnimplementedError for a
